[project]
name = "outpost"
version = "0.1.0"
description = "Code driven monitoring checks for Checkmk"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Pit Kleyersburg", email = "pit.kleyersburg@takkt.com" },
    { name = "TAKKT Industrial & Packaging GmbH", email = "webshop-devops@kaiserkraft-europa.de" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
outpost = "outpost:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lefthook>=1.12.2",
    "licensecheck>=2025.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "ty>=0.0.1a17",
]

[tool.licensecheck]
only_licenses = [
    "Apache-2.0",
    "BSD-2-Clause",
    "MIT",
    "MPL-2.0",
]
ignore_packages = [
    "mypy-extensions", # MIT licensed, information missing
]
groups = [
    "dev",
]

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "DTZ",  # flake8-datetimez
    "FAST", # FastAPI
    "I",    # isort
    "RUF",  # Ruff-specific rules
    "T20",  # flake8-print
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"examples/**.py" = [
    "T20",  # flake8-print
]
