[project]
name = "watchpost"
version = "0.1.0"
description = "Code driven monitoring checks for Checkmk"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Pit Kleyersburg", email = "pit.kleyersburg@takkt.com" },
    { name = "TAKKT Industrial & Packaging GmbH", email = "webshop-devops@kaiserkraft-europa.de" },
]
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.47.3,<0.48.0",
    "timelength>=3.0.2,<3.1.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.2.1,<9.0.0",
    "rich>=14.1.0,<15.0.0",
]
redis = [
    "redis>=6.4.0,<7.0.0",
]

[project.scripts]
watchpost = "watchpost.cli:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "lefthook>=1.12.4,<2.0.0",
    "licensecheck>=2025.1.0,<2025.2.0",
    "mypy>=1.17.1,<2.0.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.13.0,<0.14.0",
    "testcontainers[redis]>=4.13.0,<5.0.0",
    "ty>=0.0.1a20",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-code-validator>=0.2.0",
    "mkdocs-material>=9.6.19",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.30.0",
]

[tool.licensecheck]
only_licenses = [
    "Apache-2.0",
    "BSD-2-Clause",
    "ISC",
    "MIT",
    "MPL-2.0",
    "PSF-2.0",
]
ignore_packages = [
    "mypy-extensions", # MIT licensed, information missing
]
groups = [
    "dev",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

exclude = [
    "tests/.*"
]

[tool.pytest.ini_options]
markers = [
    "docker: marks tests that require Docker (deselect with '-m \"not docker\"')",
]

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "DTZ",  # flake8-datetimez
    "FAST", # FastAPI
    "I",    # isort
    "RUF",  # Ruff-specific rules
    "T20",  # flake8-print
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"examples/**.py" = [
    "T20",  # flake8-print
]
