[project]
name = "basic"
version = "0.1.0"
description = "A basic example demonstrating the use of Watchpost."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Pit Kleyersburg", email = "pit.kleyersburg@takkt.com" },
    { name = "TAKKT Industrial & Packaging GmbH", email = "webshop-devops@kaiserkraft-europa.de" },
]
requires-python = ">=3.13"
dependencies = [
    "watchpost[cli]",
]

[project.scripts]
example = "basic:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
watchpost = { path = "../../", editable = true }
